<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/fragment_b_title"
        android:textSize="48sp" />

    <Button
        android:id="@+id/fragmentBNavToFragmentCButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_to_c" />

    <Button
        android:id="@+id/fragmentBBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>