<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/fragment_c_title"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/fragmentCTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        tools:text="Hello Fragment C" />

    <Button
        android:id="@+id/fragmentCNavToFragmentDButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_to_d" />

    <Button
        android:id="@+id/fragmentCNavToFragmentAButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_to_a" />

</LinearLayout>